# D2Template

./: .gitignore  CMakeLists.txt  cmake_install.cmake
include/: D2Constants.h  D2DataTables.h  D2PacketDef.h  D2Patch.h  D2PatchConst.h  D2Ptrs.h  D2Structs.h  D2Vars.h  DLLmain.h  TemplateIncludes.h
include/D2Common/: D2Inventory.h  D2Item.h  PatchFuncs.h
include/constants/: D2ItemStatCosts.h  D2Missiles.h
src/: D2Patch.h  DLLmain.cpp  DexChanges.cpp  Hirelings.cpp  PusBolt.cpp
toolchains/: mingw.cmake
